--- a/render.yaml
+++ b/render.yaml
@@ -11,3 +11,11 @@ services:
         value: 10000
       - key: FLASK_ENV
         value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: asupatri-db
+          property: connectionString
+
+databases:
+  - name: asupatri-db
+    plan: free
